# lander

./: .eslintrc.json  .gitignore  .prettierignore  .release-it.json  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: app.component.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/applications/windows/Applications/: Applications.csproj  Applications.sln  CommandLineOptions.cs  IconExtractor.cs  Program.cs
src-tauri/binaries/applications/windows/Applications/Properties/: launchSettings.json
src-tauri/binaries/applications/windows/Applications/Properties/PublishProfiles/: FolderProfile.pubxml
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  cortex.rs  main.rs  panel.rs  settings.rs  stream.rs  util.rs
src-tauri/src/command/: application.rs
src-tauri/src/command/application/: macos.rs  windows.rs
src-tauri/src/panel/: macos.rs  windows.rs
src-tauri/src/panel/macos/: monitor.rs  ns_panel.rs
src-tauri/src/util/: macos.rs
src/calculator/: calculator.ts  config.ts  token.ts  types.ts  util.ts
src/constants/: constants.ts
src/cortex/: index.ts  json-parser.ts  memory.ts  message.ts  model.ts  plugin.ts  prompt.ts
src/declerations/: env.d.ts
src/models/: analytics-event.model.ts  application.model.ts  command.model.ts  currency.model.ts  index.ts  subscription.model.ts  thread.model.ts  user.model.ts
src/polyfills/: crypto+randomUUID.ts  index.ts
src/queries/: archive.query.ts  index.ts  user.query.ts
src/services/: analytics.service.ts  event.service.ts  index.ts  invoke.service.ts  network.service.mock.ts  network.service.ts  settings.service.ts  storage.service.ts  thread.service.ts
src/store/: chat.store.ts  command.store.ts  index.ts  mouse.store.ts  network.store.ts  query.store.ts  theme.store.ts  (+2 more)
(+81 files in other folders)
