[package]
name = "app"
version = "0.0.0"
authors = ["Agni Ilango"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["global-shortcut-all", "http-request", "macos-private-api", "process-command-api", "process-relaunch", "protocol-asset", "shell-open", "shell-sidecar", "updater"] }
window-vibrancy = "0.3.2"
regex = "1.7.1"
directories = "4.0.1"
reqwest = { version = "0.11.15", features = ["stream"] }
tokio = "1.26.0"
tokio-util = "0.7.7"
futures = "0.3.27"
block = "0.1.6"
rdev = "0.5.2"
clipboard = "0.5.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
uuid = "1.3.1"
fantoccini = "0.20.0-rc.4"
portpicker = "0.1.1"
webdriver-install = "0.3.2"
twox-hash = "1.6.3"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-graphics = "0.22.3"
core-foundation = "0.9.3" 
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
macos-accessibility-client = "0.0.1"
plist = "1.4.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
